# rag-qa-system

./: .env.example  .gitignore  Dockerfile  LICENSE  RAG技术原理分析报告.md  RAG智能问答对话系统.md  RAG智能问答系统_实验报告.md  README.md  STARTUP.md  docker-compose.yml  pyproject.toml  requirements.txt  start.bat  start_server.py  实验报告_补充内容.md  数据处理与知识库构建_PPT要点.md  系统总体架构_PPT要点.md
234100227/: run.py
234100227/backend/: __init__.py  config.py  rag_02_zhishiku_jiazai.py  rag_03_wendang_qiefen.py  rag_05_faiss_goujian.py  rag_07_duihua_jilu.py
234100227/frontend/: index.html  package-lock.json  vite.config.ts
backend/: build_index.py  build_kb.py  chunker.py  config.py  embedder.py  history.py  indexer.py  llm_client.py  loader.py  main.py  prompt_builder.py  rag_01_app.py  rag_04_xiangliang_bianma.py  rag_06_jiansuo_mmr.py  retriever.py
frontend/: package.json  tsconfig.app.tsbuildinfo
frontend/src/: App.tsx
knowledge_bases/dongba/: 东巴文化传承.txt  东巴文字.txt  东巴祭祀.txt  东巴经书.txt  东巴绘画.txt
knowledge_bases/heqingyinqi/: 鹤庆银器传承.txt  鹤庆银器历史.txt  鹤庆银器工艺.txt  鹤庆银器特点.txt  鹤庆银器现代应用.txt
knowledge_bases/huobajie/: 火把节传统活动.txt  火把节历史.txt  火把节文化内涵.txt  火把节特点.txt  火把节现代传承.txt
knowledge_bases/jianshuizitao/: 紫陶代表作品.txt  紫陶历史.txt  紫陶工艺.txt  紫陶文化价值.txt  紫陶特点.txt
knowledge_bases/kongquewu/: 孔雀舞传承.txt  孔雀舞历史.txt  孔雀舞特点.txt  孔雀舞现代发展.txt  孔雀舞表演艺术.txt
knowledge_bases/naxiguyue/: 纳西古乐传承.txt  纳西古乐历史.txt  纳西古乐演奏艺术.txt  纳西古乐特点.txt  纳西古乐现代发展.txt
knowledge_bases/poshuijie/: 泼水节传承.txt  泼水节传统活动.txt  泼水节历史.txt  泼水节文化内涵.txt  泼水节现代发展.txt
tests/: conftest.py  test_api.py  test_chunker.py  test_embedder.py  test_history.py  test_loader.py  test_retriever.py
(+29 files in other folders)
